--- a/extension_files/manifest.json
+++ b/extension_files/manifest.json
@@ -5,6 +5,6 @@
     "version": "1.0",
     "action": {
       "default_popup": "ProductCarbon.html",
-      "default_icon": "hello_extensions.png"
+      "default_icon": "logo.png"
     }
   }
