--- a/extension_files/manifest.json
+++ b/extension_files/manifest.json
@@ -4,7 +4,14 @@
     "description": "Base Level Extension",
     "version": "1.0",
     "action": {
-      "default_popup": "ProductCarbon.html",
-      "default_icon": "logo.png"
-    }
-  }
+        "default_popup": "ProductCarbon.html",
+        "default_icon": "logo.png"
+    },
+    "content_scripts": [    {
+        "js": ["scripts/content.js"],
+        "matches": [
+            "https://developer.chrome.com/docs/extensions/*",
+            "https://developer.chrome.com/docs/webstore/*"
+        ]
+    }   ]
+}
