--- a/extension_files/manifest.json
+++ b/extension_files/manifest.json
@@ -1,15 +1,11 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "Product Carbon",
     "description": "Base Level Extension",
     "version": "1.0",
-    "action": {
-        "default_popup": "ProductCarbon.html",
-        "default_icon": "logo.png"
-    },
-    "icons": {
-        "128": "logo.png"
-      },
+    "browser_action": {
+        "default_popup": "popup.html"
+        },
     "content_scripts": [    {
         "js": ["scripts/content.js"],
         "matches": [
