--- a/extension_files/manifest.json
+++ b/extension_files/manifest.json
@@ -8,9 +8,6 @@
         },
     "content_scripts": [    {
         "js": ["scripts/content.js"],
-        "matches": [
-            "https://developer.chrome.com/docs/extensions/*",
-            "https://developer.chrome.com/docs/webstore/*"
-        ]
+        "matches": ["<all_urls>"]
     }   ]
 }
