--- a/extension_files/manifest.json
+++ b/extension_files/manifest.json
@@ -1,9 +1,16 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Product Carbon",
     "description": "Base Level Extension",
     "version": "1.0",
-    "browser_action": {
+    "permissions": ["activeTab"],
+    "host_permissions": [
+    "<all_urls>"
+    ],
+    "background": {
+    "service_worker": "background.js"
+    },
+    "action": {
         "default_popup": "popup.html"
         },
     "content_scripts": [    {
