--- a/extension_files/manifest.json
+++ b/extension_files/manifest.json
@@ -5,15 +5,22 @@
     "version": "1.0",
     "permissions": ["activeTab"],
     "host_permissions": [
-    "<all_urls>"
+      "<all_urls>"
     ],
     "background": {
-    "service_worker": "background.js",
-    "default_icon": {
-        "48": "images/logo.png"
-    }
+      "service_worker": "background.js"
     },
     "action": {
-        "default_popup": "popup.html"
+      "default_popup": "popup.html",
+      "default_icon": {
+        "48": "images/logo.png"
+      }
+    },
+    "content_scripts": [
+        {
+          "matches": ["<all_urls>"],
+          "js": ["scripts/content.js"]
         }
-}
+      ]
+  }
+  
